[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/star-solid.svg" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://EndScreen.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.247059, 0.639216, 0.666667, 0.803922 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.5
margin_top = -227.995
margin_right = 360.5
margin_bottom = 236.005
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_right = 724.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
text = "SUCCESS!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Panel"]
margin_top = 73.0754
margin_right = 724.0
margin_bottom = 151.075
custom_fonts/font = SubResource( 2 )
text = "SCORE: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="star1lab" type="Label" parent="Panel"]
margin_left = 55.627
margin_top = 378.163
margin_right = 208.627
margin_bottom = 456.163
custom_fonts/font = SubResource( 2 )
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="star2lab" type="Label" parent="Panel"]
margin_left = 282.413
margin_top = 378.163
margin_right = 435.413
margin_bottom = 456.163
custom_fonts/font = SubResource( 2 )
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="star3lab" type="Label" parent="Panel"]
margin_left = 509.198
margin_top = 375.643
margin_right = 662.198
margin_bottom = 453.643
custom_fonts/font = SubResource( 2 )
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="star1" type="Sprite" parent="Panel"]
position = Vector2( 135.954, 248.205 )
scale = Vector2( 0.40449, 0.40449 )
texture = ExtResource( 1 )

[node name="star2" type="Sprite" parent="Panel"]
position = Vector2( 362.739, 250.724 )
scale = Vector2( 0.40449, 0.40449 )
texture = ExtResource( 1 )

[node name="star3" type="Sprite" parent="Panel"]
position = Vector2( 589.525, 250.724 )
scale = Vector2( 0.40449, 0.40449 )
texture = ExtResource( 1 )
